fix button margins on mobile

--- a/assets/sass/site/job-details/_details.scss
+++ b/assets/sass/site/job-details/_details.scss
@@ -42,7 +42,7 @@
         }
     }
 
-    @media(max-width: 375px) {
+    @media(max-width: 767px) {
         .btn-apply,
         .btn-save,
         .btn-share {
